Multilayer EXR inputs generate pink frame/last displayed frame when using an image sequence offset #37221

Closed
opened 2013-10-27 07:43:52 +01:00 by Andrew Buttery · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 x64 service pack 1
NVIDIA GeForce 540M

- Blender version with error, and version that worked ---

Bug found in 2.68a; 2.69 RC3

- Short description of error ---

If you have a sequence of Multilayer EXR frames (say 0010 to 0020) and create a image sequence input node and then use an offset. When you first load, with the timeline at frame 1 and advance one frame instead of a clear frame (which is what happens with a PNG) it generates a pink image. Once you advance to frame 10 the composite happens correctly, but if you then goto frame 9 it looks like it caches the last EXR loaded and then displays that when it should be blank again (like a png)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open attached .blend file
  2. Select scene 1 - PNG cube render; Ctrl-F12 (generates frames 1-20 background cube pngs)
  3. Select scene 2 - EXR cube render; Ctrl-F12 (generates frames 1-20 background cube EXRs)
  4. Select scene 3 - PNG sphere render; Ctrl-F12 (generates frames 10-20 sphere overlay pngs)
  5. Select scene 4 - EXR sphere render; Ctrl-F12 (generates frames 10-20 sphere overlay EXRs)
  6. Check frames have rendered correctly - there should now be four sets of rendered frames in subdirectories. 2x20 cube frames and 2x10 sphere frames
  7. Reopen the .blend file
  8. Select scene 5 - Compositing; move to the compositor if required
  9. Advance one frame - pink image should appear (see attached image)
  10. Continue to advance to frame 10 - composite should now display correctly for both file types
  11. Go back one frame to frame 9 - EXR composite will now be using frame 10 for any of the first 9 frames
    %%%
%%%--- Operating System, Graphics card --- Windows 7 x64 service pack 1 NVIDIA GeForce 540M - Blender version with error, and version that worked --- Bug found in 2.68a; 2.69 RC3 - Short description of error --- If you have a sequence of Multilayer EXR frames (say 0010 to 0020) and create a image sequence input node and then use an offset. When you first load, with the timeline at frame 1 and advance one frame instead of a clear frame (which is what happens with a PNG) it generates a pink image. Once you advance to frame 10 the composite happens correctly, but if you then goto frame 9 it looks like it caches the last EXR loaded and then displays that when it should be blank again (like a png) - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open attached .blend file 2. Select scene 1 - PNG cube render; Ctrl-F12 (generates frames 1-20 background cube pngs) 3. Select scene 2 - EXR cube render; Ctrl-F12 (generates frames 1-20 background cube EXRs) 4. Select scene 3 - PNG sphere render; Ctrl-F12 (generates frames 10-20 sphere overlay pngs) 5. Select scene 4 - EXR sphere render; Ctrl-F12 (generates frames 10-20 sphere overlay EXRs) 6. Check frames have rendered correctly - there should now be four sets of rendered frames in subdirectories. 2x20 cube frames and 2x10 sphere frames 7. Reopen the .blend file 8. Select scene 5 - Compositing; move to the compositor if required 9. Advance one frame - pink image should appear (see attached image) 10. Continue to advance to frame 10 - composite should now display correctly for both file types 11. Go back one frame to frame 9 - EXR composite will now be using frame 10 for any of the first 9 frames %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev60965. Thanks for the report, closing.%%%

%%%Fixed in svn rev60965. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37221
No description provided.