source/blender/compositor/nodes/COM_ImageNode.cpp
@@ -142,7 +142,17 @@ void ImageNode::convertToOperations(ExecutionSystem *graph, CompositorContext *c
 
 		/* without this, multilayer that fail to load will crash blender [#32490] */
 		if (is_multilayer_ok == false) {
-			convertToOperations_invalid(graph, context);
+			int index;
+			vector<OutputSocket *> &outputsockets = this->getOutputSockets();
+			for (index = 0; index < outputsockets.size(); index++) {
+				const float warning_color[4] = {0.0f, 0.0f, 0.0f, 0.0f};
+				SetColorOperation *operation = new SetColorOperation();
+				operation->setChannels(warning_color);
+
+				/* link the operation */
+				this->getOutputSocket(index)->relinkConnections(operation->getOutputSocket());
+				graph->addOperation(operation);
+			}
 		}
 	}
 	else {
